# Gamma

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  buildandrun.sh  distclean  run.sh
Gamma/: Access.h  DFT.h  Delay.h  Domain.h  Effects.h  Envelope.h  Filter.h  Gamma.h  Scheduler.h  SimpleGamma.h  Thread.h  Types.h  ipl.h  scl.h  tbl.h
cmake/Modules/: FindLibSndFile.cmake
cmake_modules/: CMakeRunTargets.cmake  FindLibSndFile.cmake  FindPortaudio.cmake
examples/envelope/: segExp.cpp
examples/simplegamma/: oscAccum.cpp
examples/spectral/: pitchShift.cpp
examples/synths/: Echo.cpp
projects/: readme.txt
tests/: unitTests.cpp
tests/ut/: utFFT.cpp  utTypes.cpp
tutorial/: 01_Sine_tutorial.cpp  02_Noise_tutorial.cpp  03_Osc_tutorial.cpp  04_ADSR_tutorial.cpp  06_Curve_tutorial.cpp  08_Delay_tutorial.cpp  09_DSF_tutorial.cpp  10_Pan_tutorial.cpp  11_Reson_tutorial.cpp  12_Audio_Input_tutorial.cpp  13_STFT_tutorial.cpp  ADSR_tutorial.cpp  Curve_tutorial.cpp  Delay_tutorial.cpp
